# django-client-side-image-cropping

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: pythonpublish.yml
client_side_image_cropping/: __init__.py  admin.py  apps.py  widgets.py
client_side_image_cropping/locale/de_DE/LC_MESSAGES/: django.po
client_side_image_cropping/locale/es-ar/LC_MESSAGES/: django.po
client_side_image_cropping/locale/es_AR/LC_MESSAGES/: django.mo  django.po
client_side_image_cropping/locale/fr_FR/LC_MESSAGES/: django.po
client_side_image_cropping/locale/nl/LC_MESSAGES/: django.mo  django.po
client_side_image_cropping/locale/ru_RU/LC_MESSAGES/: django.po
client_side_image_cropping/static/client_side_image_cropping/: cropping_widget.css  cropping_widget.js
client_side_image_cropping/templates/: client-side_cropping_widget.html
