[metadata]
name = django-client-side-image-cropping
version = 0.1.10
description = Widget for the Django ImageField that provides an interface for cropping the image client-side to a specific size.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koendewit/django-client-side-image-cropping
author = Koen De Wit
author_email = koendewit@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.5
install_requires =
    Django>=2.2
include_package_data = true
packages = find:
